# RadRHD_solver

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  ReadMe.md  cmake_modules.cmake  graph_illum_calc.txt  install.sh  make_dependens  make_vtk
build_graph/include/: graph_calculation.h  graph_config.h  graph_init_state.h  graph_reader_writer.h  graph_struct.h
build_graph/src/: graph_calc_no_omp.cpp  graph_calc_no_omp.h  graph_calc_omp.cpp  graph_calculation.cpp  graph_init_state.cpp  graph_init_state.h  graph_main.cpp  graph_read_write.cpp  graph_static_value.cpp
config/: directories_cfg.json  directories_cfg_claster.json  hllc_cfg.json  solve_cfg.json
cuda/include/: cuda_def.h  cuda_illum_param.h  cuda_init_mem.h  cuda_memory.h  cuda_scattering.h  cuda_solve.h  cuda_struct.h
cuda/include/interface/: cuda_interface.h  cuda_ray_interface.h
cuda/include/ray_tracing/: cuda_ray_calc.h  cuda_ray_geo_intersect.h  cuda_ray_init.h  (+1 more)
cuda/src/: cuda_init_mem.cu  cuda_solve.cu  cuda_struct.cu
graph/include/: graph_calc.h  graph_calc_omp.h  graph_config.h  graph_init_state.h  graph_inner_bound.h  graph_main.h
graph/src/: graph_by_direction.cpp  graph_calc.cpp  graph_calc_omp.cpp  graph_init_state.cpp  graph_inner_bound.cpp  graph_main.cpp
include/: ReadMe.md  hd_config.h  illum_config.h  prj_config.h  solvers_config.h
include/global_config/: dbgdef.h  global_def.h  global_headers.h  global_types.h  global_value.h  prj_config.h
lib/: CMakeLists.txt  dbgdef.h  global_consts.h  global_def.h  global_headers.h  global_types.h  global_value.h
lib/aligned_vec/: aligned_vector.h
lib/calculator/: calculator.h
lib/files_sys/include/: file_sys.h  reader_bin.h  reader_json.h  reader_txt.h  reader_vtk.h  string_utils.h  writer_bin.h  writer_json.h  writer_txt.h  writer_vtk.h
lib/files_sys/src/: reader_bin.cpp  reader_json.cpp  reader_txt.cpp  writer_bin.cpp  writer_txt.cpp
lib/geometry/: build_internal_format .cpp  build_internal_format.cpp  convert_vtk_geo.cpp  convert_vtk_geo.h  geo_types.cpp  geo_types.h  intersections.h
lib/geometry/include/: build_internal_format.h  convert_bin_to_geo.h  convert_face_to_cell.h  convert_vtk_geo.h  geo_types.h  intersections.h  linear_alg.h  make_internal_format.h
lib/geometry/src/: build_internal_format.cpp  convert_bin_to_geo.cpp  convert_vtk_geo.cpp  geo_types.cpp  intersections.cpp  linear_alg.cpp  make_internal_format.cpp
lib/grids/include/: solvers_struct.h
lib/grids/src/: solvers_struct.cpp
lib/json/: json_struct.cpp  json_struct.h
lib/json/include/: json_struct.h
lib/json/src/: json_struct.cpp
lib/mpi_extension/: mpi_ext.cpp  mpi_ext.h  mpi_shifts.cpp  mpi_shifts.h
lib/mpi_extension/include/: mpi_ext.h  mpi_shifts.h
lib/mpi_extension/src/: mpi_ext.cpp  mpi_shifts.cpp
lib/output_interface/: color_mod.h  timer.h
lib/physics/include/: compton.h  gas_state.h  plunk.h
lib/physics/src/: compton.cpp  plunk.cpp
lib/solvers_types/: solvers_types.cpp  solvers_types.h
lib/vtk_func/include/: set_vtk_data.h
lib/vtk_func/src/: set_vtk_data.cpp
make_trace/include/: trace_main.h  trace_nodes.h  trace_prebuild.h  trace_struct.h  trace_to_face.h  trace_transitions.h
make_trace/src/: trace_by_direction.cpp  trace_main.cpp  trace_nodes.cpp  trace_prebuild.cpp  trace_to_face.cpp  trace_transitions.cpp
resources/: generate_header.cpp  makefile  parser_header.cpp
scripts/: add_arrays_to_vtk.sh  build_directions.sh  build_directions_claster  build_grid.sh  build_grid_claster  run_trace_image_plane.sh  run_trace_image_plane_no_cash.sh
solvers/: solvers_struct.cpp  solvers_struct.h
solvers/hydro/: hydro_mpi_cfg.cpp  hydro_mpi_cfg.h
solvers/radiation_acceleration/: const_rhs.cpp  foo.cpp
src/: get_projection.cpp  get_reflection.cpp  graph_builder.cpp  illum_extra_solver.cpp  illum_face_solver.cpp  illum_multi_gpu_solver.cpp  illum_solver.cpp  main.cpp  rad_rhllc_solver.cpp  rad_rhllc_solver_mpi.cpp  rhllc_solver.cpp  rhllc_solver_mpi.cpp  spectrum.cpp  tracing_by_observer.cpp
src/RHD/: rhllc_solver.cpp  rhllc_solver_mpi.cpp
src/illum/: illum_face_solver.cpp  illum_multi_gpu_solver.cpp  illum_solver.cpp
src/radRHD/: rad_rhllc_solver_mpi.cpp
src/trace/: trace_builder.cpp
src/utils/: get_observer_projection.cpp  get_projection.cpp  tracing_by_observer.cpp
tests/: CMakeLists.txt
tests/build_graph/: graph_grid.cpp
tests/data/: brick.vtk  donor.vtk  sphere.vtk  surface_126_dir.txt  surface_26_dir.txt
tests/src/: graph_test.cpp  hllc_test.cpp  illum_test_cpu.cpp  off_illum_test_divstream.cpp  off_rhllc_test.cpp  rhllc_mpi_test.cpp  rhllc_omp_test.cpp  vexpr_vs_eigen_test.cpp
tests/src/reflections/: bound_reflect_test.cpp  gen_illum_by_dirs.cpp  run_reflect_test.sh
utils/: CMakeLists.txt  add_bin_scalar_to_vtk.cpp  bin_files_to_geo.h  data_to_simple_txt.cpp  get_surface.cpp  make_1d_projection.cpp  make_all_geo_data.cpp  make_series_projection_on_ray.cpp  netgen_to_vtk.cpp  set_bin_scalar_to_vtk.cpp  utils.h  write_data_to_vtk.h
utils/file_module/: archive.cpp  copy_files.cpp  delete_files.cpp  file_module.h  off_unarchive.cpp  reduce_files.cpp  unarchive.cpp
utils/ray_tracing/: make1D_from_plane.cpp  make_griddir_to_plan_projection.cpp  make_observer_plane.cpp  plane_from_vtk.cpp  rebuild_image_plane.cpp
utils/side_utils/: generic_points_cloud.cpp
utils/src/: add_bin_scalar_to_vtk.cpp  bin_to_geo.cpp  compare_files.cpp  flux_to_bin.cpp  get_average_volume.cpp  get_sphere_direction.cpp  get_surface.cpp  make_1d_projection.cpp  make_all_geo_data.cpp  make_series_1d_projection.cpp  make_series_projection_on_ray.cpp  make_trace.cpp  netgen_mesh_to_metis.cpp  netgen_mesh_to_vtk.cpp  netgen_to_metis.cpp  netgen_to_vtk.cpp  netgen_to_vtk_surface.cpp  rebuild_solve.cpp  renum_grid_by_metis.cpp  set_bin_scalar_to_vtk.cpp  vtk_to_bin.cpp
utils/template_functions/: read_netgen.h  write_data_to_vtk.h  write_file_vtk.h  write_metis.h
wolfram/: 1d_solution.nb  CollingFunc.nb  EnergyTest.nb  PlaneDisk.nb  Rosh.nb  ScatCompton.nb  Scattering.nb  SizeConst.nb  constFrqSol.nb  gloss_curve.nb  plank.nb
(+147 files in other folders)
